Fixed mkdir bug

--- a/isti.ipynb
+++ b/isti.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "609a1d39",
+   "id": "9ec40a12",
    "metadata": {
     "scrolled": false
    },
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a1d73060",
+   "id": "a5f12618",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ebdeb29c",
+   "id": "5177f637",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e5b164c1",
+   "id": "bb7628c8",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e8706341",
+   "id": "dd4259e1",
    "metadata": {
     "scrolled": false
    },
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "599dbade",
+   "id": "946908de",
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13f9a539",
+   "id": "3ffa9122",
    "metadata": {},
    "source": [
     "## Generating the training, validation and test data\n",
@@ -267,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "3b22bcf8",
+   "id": "b15066fd",
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "2b969692",
+   "id": "5c6bca46",
    "metadata": {},
    "outputs": [
     {
@@ -380,12 +380,16 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "43b05042",
+   "id": "f8eef259",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create train, val and test folders\n",
     "import os\n",
+    "\n",
+    "def mkdir(path):\n",
+    "    if not os.path.isdir(path):\n",
+    "        os.mkdir(path)\n",
     "\n",
     "os.mkdir('data')\n",
     "\n",
@@ -402,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "4afd7d43",
+   "id": "2c6fd6fb",
    "metadata": {},
    "outputs": [
     {
