--- a/data_generation.ipynb
+++ b/data_generation.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9ec40a12",
+   "id": "1b7e8631",
    "metadata": {
     "scrolled": false
    },
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a5f12618",
+   "id": "e6b9c8b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5177f637",
+   "id": "5f0eb6ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "bb7628c8",
+   "id": "98fc0876",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "dd4259e1",
+   "id": "f1681a47",
    "metadata": {
     "scrolled": false
    },
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "946908de",
+   "id": "0905c726",
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ffa9122",
+   "id": "4cef3c41",
    "metadata": {},
    "source": [
     "## Generating the training, validation and test data\n",
@@ -267,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b15066fd",
+   "id": "73b9f707",
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "5c6bca46",
+   "id": "41a20f62",
    "metadata": {},
    "outputs": [
     {
@@ -379,8 +379,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "f8eef259",
+   "execution_count": 57,
+   "id": "7d615737",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,31 +391,31 @@
     "    if not os.path.isdir(path):\n",
     "        os.mkdir(path)\n",
     "\n",
-    "os.mkdir('data')\n",
+    "mkdir('data')\n",
     "\n",
     "train_path = os.path.join('data', 'train')\n",
-    "os.mkdir(train_path)\n",
+    "mkdir(train_path)\n",
     "\n",
     "val_path = os.path.join('data', 'val')\n",
-    "os.mkdir(val_path)\n",
+    "mkdir(val_path)\n",
     "\n",
     "test_path = os.path.join('data', 'test')\n",
-    "os.mkdir(test_path)"
+    "mkdir(test_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "2c6fd6fb",
+   "execution_count": 58,
+   "id": "a675ddd8",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "60it [00:02, 29.17it/s] \n",
-      "20it [00:00, 328.16it/s]\n",
-      "20it [00:00, 332.60it/s]\n"
+      "60it [00:00, 134.33it/s]\n",
+      "20it [00:00, 72.58it/s]\n",
+      "20it [00:00, 308.86it/s]\n"
      ]
     }
    ],
@@ -423,25 +423,33 @@
     "# write the data to files\n",
     "for i, (V, E, E_eval) in tqdm(enumerate(train)):\n",
     "    save_path = os.path.join('data', 'train', str(i))\n",
-    "    os.mkdir(save_path)\n",
+    "    mkdir(save_path)\n",
     "    np.savetxt(os.path.join(save_path, 'input_v'), V, fmt='%s')\n",
     "    np.savetxt(os.path.join(save_path, 'input_e'), E, fmt='%s')\n",
     "    np.savetxt(os.path.join(save_path, 'output_e'), E_eval, fmt='%s')\n",
     "    \n",
     "for i, (V, E, E_eval) in tqdm(enumerate(val)):\n",
     "    save_path = os.path.join('data', 'val', str(i))\n",
-    "    os.mkdir(save_path)\n",
+    "    mkdir(save_path)\n",
     "    np.savetxt(os.path.join(save_path, 'input_v'), V, fmt='%s')\n",
     "    np.savetxt(os.path.join(save_path, 'input_e'), E, fmt='%s')\n",
     "    np.savetxt(os.path.join(save_path, 'output_e'), E_eval, fmt='%s')\n",
     "    \n",
     "for i, (V, E, E_eval) in tqdm(enumerate(test)):\n",
     "    save_path = os.path.join('data', 'test', str(i))\n",
-    "    os.mkdir(save_path)\n",
+    "    mkdir(save_path)\n",
     "    np.savetxt(os.path.join(save_path, 'input_v'), V, fmt='%s')\n",
     "    np.savetxt(os.path.join(save_path, 'input_e'), E, fmt='%s')\n",
     "    np.savetxt(os.path.join(save_path, 'output_e'), E_eval, fmt='%s')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3a7c936",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -460,7 +468,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
