load_data 1. version

--- a/train.ipynb
+++ b/train.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -26,8 +12,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Requirement already satisfied: preprocess in /usr/local/lib/python3.7/dist-packages (2.0.0)\n",
@@ -69,49 +55,60 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "def load_data():\n",
-        "\n",
-        "  #Mate\n",
-        "    # load the data: x, tx, allx, graph\n",
-        "    names = [\"x\", \"tx\", \"allx\", \"graph\"]\n",
-        "    objects = []\n",
-        "    for i in range(len(names)):\n",
-        "        with open(\"data/ind.{}.{}\".format(dataset, names[i]), \"rb\") as f:\n",
-        "            if sys.version_info > (3, 0):\n",
-        "                objects.append(pkl.load(f, encoding=\"latin1\"))\n",
-        "            else:\n",
-        "                objects.append(pkl.load(f))\n",
-        "    x, tx, allx, graph = tuple(objects)\n",
-        "    test_idx_reorder = parse_index_file(\n",
-        "        \"data/ind.{}.test.index\".format(dataset)\n",
-        "    )\n",
-        "    test_idx_range = np.sort(test_idx_reorder)\n",
-        "\n",
-        "    if dataset == \"citeseer\":\n",
-        "        # Fix citeseer dataset (there are some isolated nodes in the graph)\n",
-        "        # Find isolated nodes, add them as zero-vecs into the right position\n",
-        "        test_idx_range_full = range(\n",
-        "            min(test_idx_reorder), max(test_idx_reorder) + 1\n",
-        "        )\n",
-        "        tx_extended = sp.lil_matrix((len(test_idx_range_full), x.shape[1]))\n",
-        "        tx_extended[test_idx_range - min(test_idx_range), :] = tx\n",
-        "        tx = tx_extended\n",
-        "\n",
-        "    features = sp.vstack((allx, tx)).tolil()\n",
-        "    features[test_idx_reorder, :] = features[test_idx_range, :]\n",
-        "    adj = nx.adjacency_matrix(nx.from_dict_of_lists(graph))\n",
-        "\n",
-        "    return adj, features"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "lV9_LnLLc1T0"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "def load_data():\n",
+        "\n",
+        "    data = pd.read_csv(\"data/features.csv\", header = None)\n",
+        "    data[0] = data[0].str.lstrip(\"D, B, 0\")\n",
+        "    data[0] = data[0].astype('int')\n",
+        "    adj2 = data[0].copy()\n",
+        "    data = data.set_index(data.columns[0])\n",
+        "    sp.csr_matrix(data.values)\n",
+        "\n",
+        "    graph2 = pd.read_csv(\"db/ChCh-Miner_durgbank-chem-chem.tsv.gz\", header = None)\n",
+        "    graph = graph2.copy()\n",
+        "    graph[0] = graph2[0].str.split('\\t').str[0]\n",
+        "    graph[1] = graph2[0].str.split('\\t').str[1]\n",
+        "    graph[0] = graph[0].str.lstrip(\"D, B, 0\")\n",
+        "    graph[0] = graph[0].astype('int')\n",
+        "    graph[1] = graph[1].str.lstrip(\"D, B, 0\")\n",
+        "    graph[1] = graph[1].astype('int')\n",
+        "    graph\n",
+        "\n",
+        "    adj = pd.DataFrame(adj2)\n",
+        "    adj = adj.set_index(adj.columns[0])\n",
+        "    adj[0] = np.empty((len(adj), 0)).tolist()\n",
+        "\n",
+        "    for g in graph.iterrows():\n",
+        "        if g[1][0] in adj.index:\n",
+        "            if g[1][1] in adj.index:\n",
+        "                adj[0].loc[g[1][0]].insert(g[1][0],g[1][1])\n",
+        "                adj[0].loc[g[1][1]].insert(g[1][1],g[1][0])\n",
+        "\n",
+        "    for a in adj.iterrows():\n",
+        "        if a[1][0] == []:\n",
+        "            adj = adj.drop(index = a[0])\n",
+        "            data = data.drop(index = a[0])\n",
+        "\n",
+        "    features = sp.csr_matrix(data.values)\n",
+        "    adj_dict = pd.Series(adj[0], index = adj.index).to_dict()\n",
+        "    adjacency = nx.adjacency_matrix(nx.from_dict_of_lists(adj_dict))\n",
+        "\n",
+        "    return adjacency, features"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 34,
+      "metadata": {
+        "id": "vLBvt4Jp8g4c"
+      },
+      "outputs": [],
       "source": [
         "def compute_loss_para(adj):\n",
         "    pos_weight = (adj.shape[0] * adj.shape[0] - adj.sum()) / adj.sum()\n",
@@ -124,15 +121,15 @@
         "    weight_tensor = torch.ones(weight_mask.size(0)).to(device)\n",
         "    weight_tensor[weight_mask] = pos_weight\n",
         "    return weight_tensor, norm"
-      ],
-      "metadata": {
-        "id": "vLBvt4Jp8g4c"
-      },
-      "execution_count": 34,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 42,
+      "metadata": {
+        "id": "11RD8rsqZ4zV"
+      },
+      "outputs": [],
       "source": [
         "def mask_test_edges(adj):\n",
         "    # Function to build test set with 10% positive links\n",
@@ -228,15 +225,15 @@
         "        test_edges_false,\n",
         "    )\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "11RD8rsqZ4zV"
-      },
-      "execution_count": 42,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 43,
+      "metadata": {
+        "id": "SJoexXyVZ61z"
+      },
+      "outputs": [],
       "source": [
         "def mask_test_edges_dgl(graph, adj):\n",
         "    src, dst = graph.edges()\n",
@@ -310,15 +307,15 @@
         "        test_edges,\n",
         "        test_edges_false,\n",
         "    )"
-      ],
-      "metadata": {
-        "id": "SJoexXyVZ61z"
-      },
-      "execution_count": 43,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 44,
+      "metadata": {
+        "id": "QvLMyv2laCz8"
+      },
+      "outputs": [],
       "source": [
         "def sparse_to_tuple(sparse_mx):\n",
         "    if not sp.isspmatrix_coo(sparse_mx):\n",
@@ -327,15 +324,15 @@
         "    values = sparse_mx.data\n",
         "    shape = sparse_mx.shape\n",
         "    return coords, values, shape"
-      ],
-      "metadata": {
-        "id": "QvLMyv2laCz8"
-      },
-      "execution_count": 44,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 45,
+      "metadata": {
+        "id": "fyf17WEnaFif"
+      },
+      "outputs": [],
       "source": [
         "def preprocess_graph(adj):\n",
         "    adj = sp.coo_matrix(adj)\n",
@@ -349,23 +346,11 @@
         "        .tocoo()\n",
         "    )\n",
         "    return adj_normalized, sparse_to_tuple(adj_normalized)"
-      ],
-      "metadata": {
-        "id": "fyf17WEnaFif"
-      },
-      "execution_count": 45,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "epochs = 200\n",
-        "train_edge_idx = torch.tensor(train_edge_idx).to(device)\n",
-        "train_graph = dgl.edge_subgraph(graph, train_edge_idx, relabel_nodes=False)\n",
-        "train_graph = train_graph.to(device)\n",
-        "adj = train_graph.adjacency_matrix().to_dense().to(device)\n",
-        "norm = compute_loss_para(adj)"
-      ],
+      "execution_count": 46,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -374,12 +359,11 @@
         "id": "Xddpa7or2GvO",
         "outputId": "9ba36953-1c1b-47a2-ae2c-c466683ff2f2"
       },
-      "execution_count": 46,
       "outputs": [
         {
-          "output_type": "error",
           "ename": "NameError",
           "evalue": "ignored",
+          "output_type": "error",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
@@ -387,13 +371,19 @@
             "\u001b[0;31mNameError\u001b[0m: name 'train_edge_idx' is not defined"
           ]
         }
+      ],
+      "source": [
+        "epochs = 200\n",
+        "train_edge_idx = torch.tensor(train_edge_idx).to(device)\n",
+        "train_graph = dgl.edge_subgraph(graph, train_edge_idx, relabel_nodes=False)\n",
+        "train_graph = train_graph.to(device)\n",
+        "adj = train_graph.adjacency_matrix().to_dense().to(device)\n",
+        "norm = compute_loss_para(adj)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "vgae_model = model.VGAEModel(in_dim, args.hidden1, args.hidden2)\n"
-      ],
+      "execution_count": 54,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -402,12 +392,11 @@
         "id": "LVKU5J5Aa8ax",
         "outputId": "5da4b240-e073-4607-ddf3-714e6c8de04e"
       },
-      "execution_count": 54,
       "outputs": [
         {
-          "output_type": "error",
           "ename": "NameError",
           "evalue": "ignored",
+          "output_type": "error",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
@@ -415,10 +404,35 @@
             "\u001b[0;31mNameError\u001b[0m: name 'model' is not defined"
           ]
         }
+      ],
+      "source": [
+        "vgae_model = model.VGAEModel(in_dim, args.hidden1, args.hidden2)\n"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 53,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 235
+        },
+        "id": "AvntgBQS2Jae",
+        "outputId": "760e91ea-3ab5-4f9e-a95b-b082ff5bee17"
+      },
+      "outputs": [
+        {
+          "ename": "NameError",
+          "evalue": "ignored",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-53-39677f689844>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     16\u001b[0m                 \u001b[0;34m+\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mvgae_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog_std\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m                 \u001b[0;34m-\u001b[0m \u001b[0mvgae_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m                 \u001b[0;34m-\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvgae_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog_std\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m**\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m             )\n\u001b[1;32m     20\u001b[0m             \u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'vgae_model' is not defined"
+          ]
+        }
+      ],
       "source": [
         "for epoch in range(epochs):\n",
         "        t = time.time()\n",
@@ -468,29 +482,21 @@
         "            \"time=\",\n",
         "            \"{:.5f}\".format(time.time() - t),\n",
         "        )\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 235
-        },
-        "id": "AvntgBQS2Jae",
-        "outputId": "760e91ea-3ab5-4f9e-a95b-b082ff5bee17"
-      },
-      "execution_count": 53,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-53-39677f689844>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     16\u001b[0m                 \u001b[0;34m+\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mvgae_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog_std\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m                 \u001b[0;34m-\u001b[0m \u001b[0mvgae_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m                 \u001b[0;34m-\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvgae_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog_std\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m**\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m             )\n\u001b[1;32m     20\u001b[0m             \u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'vgae_model' is not defined"
-          ]
-        }
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
