--- a/training_example.ipynb
+++ b/training_example.ipynb
@@ -16,9 +16,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting torch\n",
+      "  Downloading torch-1.13.0-cp39-cp39-win_amd64.whl (167.2 MB)\n",
+      "Collecting dgl\n",
+      "  Downloading dgl-0.9.1-cp39-cp39-win_amd64.whl (2.4 MB)\n",
+      "Requirement already satisfied: networkx in d:\\anaconda\\lib\\site-packages (2.6.3)\n",
+      "Requirement already satisfied: pandas in d:\\anaconda\\lib\\site-packages (1.3.4)\n",
+      "Requirement already satisfied: numpy in d:\\anaconda\\lib\\site-packages (1.20.3)\n",
+      "Requirement already satisfied: typing-extensions in d:\\anaconda\\lib\\site-packages (from torch) (4.4.0)\n",
+      "Requirement already satisfied: requests>=2.19.0 in d:\\anaconda\\lib\\site-packages (from dgl) (2.26.0)\n",
+      "Requirement already satisfied: psutil>=5.8.0 in c:\\users\\mate\\appdata\\roaming\\python\\python39\\site-packages (from dgl) (5.9.4)\n",
+      "Requirement already satisfied: scipy>=1.1.0 in d:\\anaconda\\lib\\site-packages (from dgl) (1.7.1)\n",
+      "Requirement already satisfied: tqdm in d:\\anaconda\\lib\\site-packages (from dgl) (4.62.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.7.3 in c:\\users\\mate\\appdata\\roaming\\python\\python39\\site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2017.3 in d:\\anaconda\\lib\\site-packages (from pandas) (2021.3)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\mate\\appdata\\roaming\\python\\python39\\site-packages (from python-dateutil>=2.7.3->pandas) (1.16.0)\n",
+      "Requirement already satisfied: charset-normalizer~=2.0.0 in d:\\anaconda\\lib\\site-packages (from requests>=2.19.0->dgl) (2.0.4)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in d:\\anaconda\\lib\\site-packages (from requests>=2.19.0->dgl) (1.26.7)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in d:\\anaconda\\lib\\site-packages (from requests>=2.19.0->dgl) (3.2)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in d:\\anaconda\\lib\\site-packages (from requests>=2.19.0->dgl) (2021.10.8)\n",
+      "Requirement already satisfied: colorama in c:\\users\\mate\\appdata\\roaming\\python\\python39\\site-packages (from tqdm->dgl) (0.4.6)\n",
+      "Installing collected packages: torch, dgl\n",
+      "Successfully installed dgl-0.9.1 torch-1.13.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "%pip install torch dgl networkx pandas numpy"
    ]
@@ -32,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,9 +96,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "DGL backend not selected or invalid.  Assuming PyTorch for now.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Setting the default backend to \"pytorch\". You can change it in the ~/.dgl/config.json file or export the DGLBACKEND environment variable.  Valid options are: pytorch, mxnet, tensorflow (all lowercase)\n"
+     ]
+    }
+   ],
    "source": [
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
@@ -320,16 +365,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_849015/964416747.py:44: FutureWarning: adjacency_matrix will return a scipy.sparse array instead of a matrix in Networkx 3.0.\n",
-      "  adjacency = nx.adjacency_matrix(nx.from_dict_of_lists(adj_dict))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import dgl\n",
     "\n",
@@ -439,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,26 +486,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 1\ttrain_loss=2256143.25000, train_acc=0.36272 val_roc=0.52644 val_ap=0.58502\n",
-      "Epoch: 2\ttrain_loss=172.43683, train_acc=0.33002 val_roc=0.58926 val_ap=0.61743\n",
-      "Epoch: 3\ttrain_loss=6.38285, train_acc=0.32701 val_roc=0.61644 val_ap=0.62239\n",
-      "Epoch: 4\ttrain_loss=3.55159, train_acc=0.34413 val_roc=0.64832 val_ap=0.64209\n",
-      "Epoch: 5\ttrain_loss=2.36837, train_acc=0.36836 val_roc=0.65132 val_ap=0.63630\n",
-      "Epoch: 6\ttrain_loss=1.97768, train_acc=0.40257 val_roc=0.65641 val_ap=0.63406\n",
-      "Epoch: 7\ttrain_loss=1.76602, train_acc=0.42281 val_roc=0.63417 val_ap=0.61000\n",
-      "Epoch: 8\ttrain_loss=1.64636, train_acc=0.43631 val_roc=0.61507 val_ap=0.58191\n",
-      "Epoch: 9\ttrain_loss=1.59470, train_acc=0.44618 val_roc=0.60673 val_ap=0.57952\n",
-      "Epoch: 10\ttrain_loss=1.47292, train_acc=0.45012 val_roc=0.62056 val_ap=0.58413\n",
+      "Epoch: 1\ttrain_loss=13724157.00000, train_acc=0.33041 val_roc=0.36111 val_ap=0.51556\n",
+      "Epoch: 2\ttrain_loss=22651.08203, train_acc=0.30621 val_roc=0.41591 val_ap=0.54428\n",
+      "Epoch: 3\ttrain_loss=1374.94934, train_acc=0.29379 val_roc=0.46994 val_ap=0.57407\n",
+      "Epoch: 4\ttrain_loss=163.36298, train_acc=0.30082 val_roc=0.48093 val_ap=0.57092\n",
+      "Epoch: 5\ttrain_loss=41.80049, train_acc=0.31517 val_roc=0.50953 val_ap=0.57424\n",
+      "Epoch: 6\ttrain_loss=19.84391, train_acc=0.33208 val_roc=0.54343 val_ap=0.58978\n",
+      "Epoch: 7\ttrain_loss=12.84914, train_acc=0.35772 val_roc=0.56362 val_ap=0.60149\n",
+      "Epoch: 8\ttrain_loss=9.96755, train_acc=0.38953 val_roc=0.54148 val_ap=0.58610\n",
+      "Epoch: 9\ttrain_loss=8.26158, train_acc=0.41518 val_roc=0.53799 val_ap=0.58198\n",
+      "Epoch: 10\ttrain_loss=6.08721, train_acc=0.41577 val_roc=0.57654 val_ap=0.60012\n",
       "End of training!\n",
-      "test_roc=0.60987\n",
-      "test_ap=0.58271\n"
+      "test_roc=0.58522\n",
+      "test_ap=0.61078\n"
      ]
     }
    ],
@@ -514,11 +550,41 @@
     "    f'End of training!\\ntest_roc={test_roc:.5f}\\ntest_ap={test_ap:.5f}'\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Area under the ROC curve: 0.5765425237992534\n",
+      "Avarage precision: 0.6001210885964373\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Final area under the ROC curve (AUC):\" , val_roc)\n",
+    "print(\"Final avarage precision (AP):\", val_ap)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this subject area the most common evaluations are the AUC (area under the ROC curve) and AP (avarage precision).\n",
+    "The AP on the first epoch was close to 50 %, meaning it was almost random, but for the 10th epoch it became 60% (which isn`t too much, but it will be better).\n",
+    "\n",
+    "For more evaluation we choose the AUC metric. The reason behind it is, that the most important part of the project is to find all the interactions between drugs correctly if possible. So this metric checks that how precise is an interaction predicted by us. Meaning, if we predicted that between two drugs there is an interaction, what is the chance that there really is one. We chose this because it focuses on the finding more edges correctly, rather than finding non-edges correctly. \n",
+    "As seen above this metric also went above 50% after a few epochs so it is working correctly. "
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.8 ('venv': venv)",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -532,12 +598,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e24387181c4ade438ada53bbca295e7b1d979ac5797f7fff3cf25ab543e13105"
+    "hash": "88279d2366fe020547cde40dd65aa0e3aa662a6ec1f3ca12d88834876c85e1a6"
    }
   }
  },
