--- a/training_example.ipynb
+++ b/training_example.ipynb
@@ -62,20 +62,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "epochs = 10\n",
+    "epochs = 100\n",
     "features_num = 10\n",
-    "hidden1 = 32\n",
-    "hidden2 = 16\n",
-    "learning_rate = 0.01"
+    "hidden1 = 64\n",
+    "hidden2 = 32\n",
+    "learning_rate = 0.05"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,24 +96,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "DGL backend not selected or invalid.  Assuming PyTorch for now.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Setting the default backend to \"pytorch\". You can change it in the ~/.dgl/config.json file or export the DGLBACKEND environment variable.  Valid options are: pytorch, mxnet, tensorflow (all lowercase)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
@@ -179,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,26 +471,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 1\ttrain_loss=13724157.00000, train_acc=0.33041 val_roc=0.36111 val_ap=0.51556\n",
-      "Epoch: 2\ttrain_loss=22651.08203, train_acc=0.30621 val_roc=0.41591 val_ap=0.54428\n",
-      "Epoch: 3\ttrain_loss=1374.94934, train_acc=0.29379 val_roc=0.46994 val_ap=0.57407\n",
-      "Epoch: 4\ttrain_loss=163.36298, train_acc=0.30082 val_roc=0.48093 val_ap=0.57092\n",
-      "Epoch: 5\ttrain_loss=41.80049, train_acc=0.31517 val_roc=0.50953 val_ap=0.57424\n",
-      "Epoch: 6\ttrain_loss=19.84391, train_acc=0.33208 val_roc=0.54343 val_ap=0.58978\n",
-      "Epoch: 7\ttrain_loss=12.84914, train_acc=0.35772 val_roc=0.56362 val_ap=0.60149\n",
-      "Epoch: 8\ttrain_loss=9.96755, train_acc=0.38953 val_roc=0.54148 val_ap=0.58610\n",
-      "Epoch: 9\ttrain_loss=8.26158, train_acc=0.41518 val_roc=0.53799 val_ap=0.58198\n",
-      "Epoch: 10\ttrain_loss=6.08721, train_acc=0.41577 val_roc=0.57654 val_ap=0.60012\n",
+      "Epoch: 1\ttrain_loss=66886511362048.00000, train_acc=0.38762 val_roc=0.43241 val_ap=0.53634\n",
+      "Epoch: 2\ttrain_loss=2116888.50000, train_acc=0.05056 val_roc=0.05919 val_ap=0.51243\n",
+      "Epoch: 3\ttrain_loss=28105362.00000, train_acc=0.06686 val_roc=0.19331 val_ap=0.54370\n",
+      "Epoch: 4\ttrain_loss=314594688.00000, train_acc=0.23810 val_roc=0.44239 val_ap=0.56199\n",
+      "Epoch: 5\ttrain_loss=42.43733, train_acc=0.07620 val_roc=0.50820 val_ap=0.62049\n",
+      "Epoch: 6\ttrain_loss=4220044.00000, train_acc=0.24123 val_roc=0.48011 val_ap=0.58237\n",
+      "Epoch: 7\ttrain_loss=33.79496, train_acc=0.03963 val_roc=0.34338 val_ap=0.59494\n",
+      "Epoch: 8\ttrain_loss=45.18370, train_acc=0.04424 val_roc=0.43346 val_ap=0.62298\n",
+      "Epoch: 9\ttrain_loss=103.36311, train_acc=0.13120 val_roc=0.54404 val_ap=0.62602\n",
+      "Epoch: 10\ttrain_loss=17.80161, train_acc=0.04336 val_roc=0.64696 val_ap=0.69182\n",
+      "Epoch: 11\ttrain_loss=10.28090, train_acc=0.05816 val_roc=0.75000 val_ap=0.73493\n",
+      "Epoch: 12\ttrain_loss=76837756928.00000, train_acc=0.13717 val_roc=0.66579 val_ap=0.68714\n",
+      "Epoch: 13\ttrain_loss=16.28699, train_acc=0.04150 val_roc=0.67332 val_ap=0.70806\n",
+      "Epoch: 14\ttrain_loss=1006358592.00000, train_acc=0.14512 val_roc=0.70596 val_ap=0.69065\n",
+      "Epoch: 15\ttrain_loss=8.47902, train_acc=0.04462 val_roc=0.78323 val_ap=0.75531\n",
+      "Epoch: 16\ttrain_loss=5.85244, train_acc=0.06974 val_roc=0.82421 val_ap=0.78639\n",
+      "Epoch: 17\ttrain_loss=3.78946, train_acc=0.14041 val_roc=0.83492 val_ap=0.79862\n",
+      "Epoch: 18\ttrain_loss=6.25414, train_acc=0.09134 val_roc=0.81069 val_ap=0.78013\n",
+      "Epoch: 19\ttrain_loss=4.29998, train_acc=0.10749 val_roc=0.79967 val_ap=0.73634\n",
+      "Epoch: 20\ttrain_loss=4.94679, train_acc=0.09237 val_roc=0.80853 val_ap=0.74950\n",
+      "Epoch: 21\ttrain_loss=79.94664, train_acc=0.15226 val_roc=0.82996 val_ap=0.78224\n",
+      "Epoch: 22\ttrain_loss=2.97230, train_acc=0.19479 val_roc=0.81578 val_ap=0.76480\n",
+      "Epoch: 23\ttrain_loss=3.53858, train_acc=0.17622 val_roc=0.81670 val_ap=0.76699\n",
+      "Epoch: 24\ttrain_loss=3.57361, train_acc=0.19100 val_roc=0.80307 val_ap=0.74548\n",
+      "Epoch: 25\ttrain_loss=3.65737, train_acc=0.17148 val_roc=0.78875 val_ap=0.72402\n",
+      "Epoch: 26\ttrain_loss=3.54626, train_acc=0.17105 val_roc=0.79484 val_ap=0.73215\n",
+      "Epoch: 27\ttrain_loss=2.77165, train_acc=0.23939 val_roc=0.79757 val_ap=0.74346\n",
+      "Epoch: 28\ttrain_loss=2.80126, train_acc=0.24416 val_roc=0.80655 val_ap=0.75319\n",
+      "Epoch: 29\ttrain_loss=2.85216, train_acc=0.24015 val_roc=0.79074 val_ap=0.73574\n",
+      "Epoch: 30\ttrain_loss=2.90575, train_acc=0.23031 val_roc=0.77496 val_ap=0.71854\n",
+      "Epoch: 31\ttrain_loss=2.96150, train_acc=0.21669 val_roc=0.78180 val_ap=0.72305\n",
+      "Epoch: 32\ttrain_loss=2.65931, train_acc=0.26258 val_roc=0.76986 val_ap=0.71488\n",
+      "Epoch: 33\ttrain_loss=2.57226, train_acc=0.25756 val_roc=0.79423 val_ap=0.74039\n",
+      "Epoch: 34\ttrain_loss=2.21667, train_acc=0.30287 val_roc=0.77576 val_ap=0.72638\n",
+      "Epoch: 35\ttrain_loss=2.40392, train_acc=0.25438 val_roc=0.78437 val_ap=0.73053\n",
+      "Epoch: 36\ttrain_loss=2.38327, train_acc=0.27259 val_roc=0.74710 val_ap=0.69520\n",
+      "Epoch: 37\ttrain_loss=2.14761, train_acc=0.25442 val_roc=0.76835 val_ap=0.71781\n",
+      "Epoch: 38\ttrain_loss=1.95966, train_acc=0.26774 val_roc=0.78862 val_ap=0.74006\n",
+      "Epoch: 39\ttrain_loss=1.86968, train_acc=0.32720 val_roc=0.78144 val_ap=0.73315\n",
+      "Epoch: 40\ttrain_loss=1.94516, train_acc=0.30623 val_roc=0.78902 val_ap=0.73800\n",
+      "Epoch: 41\ttrain_loss=1.73502, train_acc=0.28425 val_roc=0.78340 val_ap=0.73553\n",
+      "Epoch: 42\ttrain_loss=1.56863, train_acc=0.27454 val_roc=0.75830 val_ap=0.71625\n",
+      "Epoch: 43\ttrain_loss=1.53699, train_acc=0.25844 val_roc=0.78556 val_ap=0.74081\n",
+      "Epoch: 44\ttrain_loss=1.45277, train_acc=0.28389 val_roc=0.80464 val_ap=0.75823\n",
+      "Epoch: 45\ttrain_loss=1.34312, train_acc=0.30376 val_roc=0.81921 val_ap=0.77667\n",
+      "Epoch: 46\ttrain_loss=1.22695, train_acc=0.31447 val_roc=0.81084 val_ap=0.77543\n",
+      "Epoch: 47\ttrain_loss=1.20037, train_acc=0.27731 val_roc=0.81065 val_ap=0.77385\n",
+      "Epoch: 48\ttrain_loss=1.17594, train_acc=0.25398 val_roc=0.81398 val_ap=0.77469\n",
+      "Epoch: 49\ttrain_loss=1.09634, train_acc=0.26926 val_roc=0.81893 val_ap=0.78648\n",
+      "Epoch: 50\ttrain_loss=1.03413, train_acc=0.28991 val_roc=0.83385 val_ap=0.80697\n",
+      "Epoch: 51\ttrain_loss=0.99473, train_acc=0.32505 val_roc=0.82965 val_ap=0.80555\n",
+      "Epoch: 52\ttrain_loss=1.01157, train_acc=0.27478 val_roc=0.83243 val_ap=0.80862\n",
+      "Epoch: 53\ttrain_loss=0.97071, train_acc=0.34264 val_roc=0.81009 val_ap=0.78821\n",
+      "Epoch: 54\ttrain_loss=0.96009, train_acc=0.30185 val_roc=0.83270 val_ap=0.82001\n",
+      "Epoch: 55\ttrain_loss=0.93794, train_acc=0.31475 val_roc=0.81814 val_ap=0.80990\n",
+      "Epoch: 56\ttrain_loss=0.95170, train_acc=0.25331 val_roc=0.83520 val_ap=0.82806\n",
+      "Epoch: 57\ttrain_loss=0.92948, train_acc=0.38663 val_roc=0.81528 val_ap=0.80789\n",
+      "Epoch: 58\ttrain_loss=0.95202, train_acc=0.35519 val_roc=0.81186 val_ap=0.80375\n",
+      "Epoch: 59\ttrain_loss=0.93401, train_acc=0.32668 val_roc=0.80705 val_ap=0.80148\n",
+      "Epoch: 60\ttrain_loss=0.97534, train_acc=0.18591 val_roc=0.83953 val_ap=0.83325\n",
+      "Epoch: 61\ttrain_loss=0.92201, train_acc=0.39844 val_roc=0.81762 val_ap=0.81034\n",
+      "Epoch: 62\ttrain_loss=1.11249, train_acc=0.18156 val_roc=0.80270 val_ap=0.77808\n",
+      "Epoch: 63\ttrain_loss=1.39514, train_acc=0.04098 val_roc=0.79021 val_ap=0.74310\n",
+      "Epoch: 64\ttrain_loss=1.15666, train_acc=0.29305 val_roc=0.80058 val_ap=0.77422\n",
+      "Epoch: 65\ttrain_loss=1.43326, train_acc=0.14376 val_roc=0.81089 val_ap=0.78190\n",
+      "Epoch: 66\ttrain_loss=1.16354, train_acc=0.04464 val_roc=0.79279 val_ap=0.74446\n",
+      "Epoch: 67\ttrain_loss=1.66297, train_acc=0.04082 val_roc=0.80020 val_ap=0.75891\n",
+      "Epoch: 68\ttrain_loss=1.22981, train_acc=0.14467 val_roc=0.79840 val_ap=0.76595\n",
+      "Epoch: 69\ttrain_loss=2.23497, train_acc=0.06445 val_roc=0.81350 val_ap=0.78339\n",
+      "Epoch: 70\ttrain_loss=0.99619, train_acc=0.21967 val_roc=0.82251 val_ap=0.79179\n",
+      "Epoch: 71\ttrain_loss=2.39497, train_acc=0.03926 val_roc=0.80132 val_ap=0.76017\n",
+      "Epoch: 72\ttrain_loss=2.11923, train_acc=0.04383 val_roc=0.78576 val_ap=0.73267\n",
+      "Epoch: 73\ttrain_loss=1.65545, train_acc=0.08338 val_roc=0.82653 val_ap=0.79755\n",
+      "Epoch: 74\ttrain_loss=2.05980, train_acc=0.10152 val_roc=0.81820 val_ap=0.78775\n",
+      "Epoch: 75\ttrain_loss=1.25112, train_acc=0.11048 val_roc=0.79599 val_ap=0.74663\n",
+      "Epoch: 76\ttrain_loss=2.05203, train_acc=0.04244 val_roc=0.83432 val_ap=0.79108\n",
+      "Epoch: 77\ttrain_loss=2.08414, train_acc=0.06267 val_roc=0.81742 val_ap=0.77769\n",
+      "Epoch: 78\ttrain_loss=1.61433, train_acc=0.12457 val_roc=0.80552 val_ap=0.75306\n",
+      "Epoch: 79\ttrain_loss=1.95976, train_acc=0.07774 val_roc=0.83938 val_ap=0.80366\n",
+      "Epoch: 80\ttrain_loss=1.53694, train_acc=0.13793 val_roc=0.84752 val_ap=0.81088\n",
+      "Epoch: 81\ttrain_loss=1.57495, train_acc=0.10462 val_roc=0.81139 val_ap=0.75318\n",
+      "Epoch: 82\ttrain_loss=1.88072, train_acc=0.06703 val_roc=0.82924 val_ap=0.77254\n",
+      "Epoch: 83\ttrain_loss=1.36573, train_acc=0.18814 val_roc=0.83203 val_ap=0.78971\n",
+      "Epoch: 84\ttrain_loss=1.46095, train_acc=0.21189 val_roc=0.84032 val_ap=0.79463\n",
+      "Epoch: 85\ttrain_loss=1.67605, train_acc=0.14709 val_roc=0.83811 val_ap=0.78908\n",
+      "Epoch: 86\ttrain_loss=1.38911, train_acc=0.22099 val_roc=0.82442 val_ap=0.77659\n",
+      "Epoch: 87\ttrain_loss=1.53174, train_acc=0.16259 val_roc=0.83374 val_ap=0.78375\n",
+      "Epoch: 88\ttrain_loss=1.41278, train_acc=0.20647 val_roc=0.81498 val_ap=0.76709\n",
+      "Epoch: 89\ttrain_loss=1.69557, train_acc=0.12607 val_roc=0.83018 val_ap=0.77927\n",
+      "Epoch: 90\ttrain_loss=1.39053, train_acc=0.17823 val_roc=0.82780 val_ap=0.78187\n",
+      "Epoch: 91\ttrain_loss=1.73050, train_acc=0.11104 val_roc=0.84186 val_ap=0.79301\n",
+      "Epoch: 92\ttrain_loss=1.78946, train_acc=0.12104 val_roc=0.83616 val_ap=0.78721\n",
+      "Epoch: 93\ttrain_loss=1.30284, train_acc=0.23886 val_roc=0.82793 val_ap=0.78378\n",
+      "Epoch: 94\ttrain_loss=1.44514, train_acc=0.14038 val_roc=0.83924 val_ap=0.79361\n",
+      "Epoch: 95\ttrain_loss=1.31001, train_acc=0.16998 val_roc=0.80718 val_ap=0.75862\n",
+      "Epoch: 96\ttrain_loss=1.46101, train_acc=0.11235 val_roc=0.83929 val_ap=0.79193\n",
+      "Epoch: 97\ttrain_loss=1.27546, train_acc=0.18430 val_roc=0.84309 val_ap=0.80378\n",
+      "Epoch: 98\ttrain_loss=1.35766, train_acc=0.17724 val_roc=0.83825 val_ap=0.80009\n",
+      "Epoch: 99\ttrain_loss=1.28677, train_acc=0.17082 val_roc=0.83202 val_ap=0.78906\n",
+      "Epoch: 100\ttrain_loss=1.26234, train_acc=0.13057 val_roc=0.83634 val_ap=0.79236\n",
       "End of training!\n",
-      "test_roc=0.58522\n",
-      "test_ap=0.61078\n"
+      "test_roc=0.83657\n",
+      "test_ap=0.79153\n"
      ]
     }
    ],
@@ -553,15 +628,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Area under the ROC curve: 0.5765425237992534\n",
-      "Avarage precision: 0.6001210885964373\n"
+      "Final area under the ROC curve (AUC): 0.836335232445804\n",
+      "Final avarage precision (AP): 0.7923573781176563\n"
      ]
     }
    ],
@@ -580,11 +655,21 @@
     "For more evaluation we choose the AUC metric. The reason behind it is, that the most important part of the project is to find all the interactions between drugs correctly if possible. So this metric checks that how precise is an interaction predicted by us. Meaning, if we predicted that between two drugs there is an interaction, what is the chance that there really is one. We chose this because it focuses on the finding more edges correctly, rather than finding non-edges correctly. \n",
     "As seen above this metric also went above 50% after a few epochs so it is working correctly. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -600,7 +685,6 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.7"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "88279d2366fe020547cde40dd65aa0e3aa662a6ec1f3ca12d88834876c85e1a6"
